# Tetris

./: CMakeLists.txt  README.md  main.cpp
resources/img/: Untitled.xcf
src/: Tetris.cpp  Tetris.h
